# wa-scheduler

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
scripts/: docker-auth.sh
store/: messages.db  whatsapp.db
wa_scheduler/: __main__.py  cli.py  config.py  db.py  main.py  models.py  timeutil.py
wa_scheduler/routes/: web.py
wa_scheduler/services/: health.py  scheduler.py  sync.py  wacli.py  worker.py
wa_scheduler/static/: app.js  styles.css
wa_scheduler/templates/: base.html  chats.html  contacts.html  index.html  recurring.html  runs.html  schedule_edit.html  schedules.html  send_now.html  settings.html  target_selector.html  template_edit.html  templates.html
